<resources>
    <string name="app_name">rho</string>
    <string name="next">NEXT</string>
    <string name="welcome_to_rho">Welcome to Rho!</string>
    <string name="hi_there_rho_is_an_open_source_card_payment_app_designed_to_make_transactions_smooth_and_secure_if_you_find_it_helpful_consider_supporting_me_by_donating_on_my_github_page_at_mca_rho">Hi there! Rho is an open-source card payment app designed to make transactions smooth and secure. If you find it helpful, consider supporting me by donating on my GitHub page at MCA/Rho.</string>
    <string name="ho">ρho</string>
    <string name="set_app_password">Set app password</string>
    <string name="an_app_password_must_be_set_up_for_better_security">An app password must be set up for better security.</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="to_access_your_cards_input_the_password_below">To access your cards , input the password below.</string>
    <string name="revolut_bank">Revolut Bank</string>
    <string name="master_card">MASTER CARD</string>
    <string name="ccv_178">CCV: 178</string>
    <string name="exp_02_24">EXP: 02/24</string>
    <string name="iban_ro89173283278bg3456">IBAN: RO89173283278BG3456</string>
    <string name="number_2688_9834_2734_1457">NUMBER: 2688 9834 2734 1457</string>
    <string name="card_holder_john_mic">CARD HOLDER: JOHN MIC</string>
    <string name="back">BACK</string>
    <string name="add">ADD</string>
    <string name="ready_to_pay">READY TO PAY</string>
    <string name="card_name">CARD NAME:</string>
    <string name="card_holder">CARD HOLDER:</string>
    <string name="complete_your_card_info">Complete your card info:</string>
    <string name="add_card">ADD CARD</string>
    <string name="enter_card_holder">Enter card holder</string>
    <string name="enter_card_number_16_numbers">Enter card number, 16 numbers!</string>
    <string name="iban_you_can_optionally_add_it_here">IBAN , you can optionally add it here!</string>
    <string name="exp_month">EXP_MONTH</string>
    <string name="exp_year_only_last_2_numbers">EXP_YEAR, only last 2 numbers</string>
    <string name="enter_bank_name">Enter bank name</string>
    <string name="enter_ccv">Enter CCV</string>
    <string name="ccv">CCV</string>
    <string name="year">YEAR</string>
    <string name="slash">/</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="month">MONTH</string>
    <string name="payment_network">Payment network:</string>
    <string name="payment_networkA">Payment network</string>
    <string name="other">Other</string>
    <string name="master_cardA">Master Card</string>
    <string name="visa">Visa</string>
    <string name="input_card_name">INPUT CARD NAME</string>
    <string name="enter_card_name">Enter card name</string>
    <string name="name_your_card">Name your card</string>
    <string name="card_1_example">CARD #1 EXAMPLE</string>
    <string name="remove_this_card">Remove this card?</string>
    <string name="service_description">NFC Payment Service</string>
    <string name="aid_group_description">AID group for NFC payments</string>

</resources>